--- a/package.json
+++ b/package.json
@@ -81,6 +81,15 @@
     "@storybook/react": "^6.1.11",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
+    "@types/express": "^4.17.9",
+    "@types/loadable__component": "^5.13.1",
+    "@types/node": "^14.14.16",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/react-redux": "^7.1.14",
+    "@types/react-router-dom": "^5.1.6",
+    "@types/redux-api-middleware": "^3.2.2",
+    "@types/store": "^2.0.2",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
@@ -107,6 +116,8 @@
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-processor-styled-components": "^1.10.0",
     "terser-webpack-plugin": "^4.2.3",
+    "ts-loader": "^8.0.12",
+    "typescript": "^4.1.3",
     "webpack-cli": "^3.3.12",
     "webpack-dev-middleware": "^3.7.3",
     "webpack-hot-middleware": "^2.25.0",
