--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "start": "NODE_ENV=production node ./build/server/index.js",
     "start-dev": "babel-node src/server",
     "start:watch": "npm run clean && npm run build && nodemon",
-    "lint:js": "eslint src/**/*.js && eslint src/**/*.jsx",
-    "lint:css": "stylelint \"./src/**/*.jsx\"",
-    "lint": "npm run lint:js && npm run lint:css",
+    "lint:ts": "eslint src/**/*.ts && eslint src/**/*.tsx",
+    "lint:css": "stylelint \"./src/**/*.tsx\"",
+    "lint": "npm run lint:ts && npm run lint:css",
     "prettier:verify": "prettier --check .",
     "pretest": "jest --clearCache",
     "test": "jest",
@@ -90,6 +90,8 @@
     "@types/react-router-dom": "^5.1.6",
     "@types/redux-api-middleware": "^3.2.2",
     "@types/store": "^2.0.2",
+    "@typescript-eslint/eslint-plugin": "4.11.0",
+    "@typescript-eslint/parser": "4.11.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
