--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "A universal react app with styled-components and redux support",
   "main": "build/server/index.js",
   "scripts": {
-    "build:server": "babel ./src --out-dir build",
+    "build:server": "babel ./src --out-dir build --extensions \".ts,.tsx\" --ignore \"src/**/*.stories.js\",\"src/**/*.test.js\"",
     "build:client": "BABEL_ENV=webpack webpack",
     "build": "npm run build:server && npm run build:client",
     "clean": "rimraf build && rimraf build-static",
     "start": "NODE_ENV=production node ./build/server/index.js",
-    "start-dev": "babel-node src/server",
+    "start-dev": "babel-node --extensions \".ts,.tsx\" src/server/index.ts",
     "start:watch": "npm run clean && npm run build && nodemon",
     "lint:ts": "eslint src/**/*.ts && eslint src/**/*.tsx",
     "lint:css": "stylelint \"./src/**/*.tsx\"",
@@ -70,8 +70,10 @@
     "@babel/plugin-syntax-optional-chaining": "^7.8.3",
     "@babel/plugin-transform-react-inline-elements": "^7.12.1",
     "@babel/plugin-transform-runtime": "^7.12.10",
+    "@babel/plugin-transform-typescript": "^7.12.1",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
+    "@babel/preset-typescript": "^7.12.7",
     "@loadable/babel-plugin": "^5.13.2",
     "@loadable/webpack-plugin": "^5.14.0",
     "@storybook/addon-a11y": "^6.1.11",
@@ -81,8 +83,10 @@
     "@storybook/react": "^6.1.11",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
+    "@types/confit": "^2.0.3",
     "@types/express": "^4.17.9",
     "@types/loadable__component": "^5.13.1",
+    "@types/loadable__server": "^5.12.3",
     "@types/node": "^14.14.16",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
@@ -109,6 +113,7 @@
     "husky": "^4.3.6",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.3",
+    "nodemon": "^2.0.6",
     "prettier": "2.2.1",
     "react-is": "^16.13.1",
     "react-test-renderer": "^16.14.0",
@@ -119,6 +124,7 @@
     "stylelint-processor-styled-components": "^1.10.0",
     "terser-webpack-plugin": "^4.2.3",
     "ts-loader": "^8.0.12",
+    "ts-node": "^9.1.1",
     "typescript": "^4.1.3",
     "webpack-cli": "^3.3.12",
     "webpack-dev-middleware": "^3.7.3",
