--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "@testing-library/react": "^11.2.2",
     "@types/confit": "^2.0.3",
     "@types/express": "^4.17.9",
+    "@types/jest": "^26.0.19",
     "@types/loadable__component": "^5.13.1",
     "@types/loadable__server": "^5.12.3",
     "@types/node": "^14.14.16",
@@ -97,7 +98,6 @@
     "@typescript-eslint/eslint-plugin": "4.11.0",
     "@typescript-eslint/parser": "4.11.0",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
     "babel-plugin-macros": "^2.8.0",
     "eslint": "^7.16.0",
@@ -123,6 +123,7 @@
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-processor-styled-components": "^1.10.0",
     "terser-webpack-plugin": "^4.2.3",
+    "ts-jest": "^26.4.4",
     "ts-loader": "^8.0.12",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3",
