--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,21 +1,17 @@
-name: build
+name: Lint, Build & Test
+
 on: [push]
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-      - name: Setup node
-        uses: actions/setup-node@v1
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
-          node-version: '12.x'
-      - name: Install packages
-        run: npm install
-      - name: Verify code formatting
-        run: npx prettier --check .
-      - name: Lint Code
-        run: npm run lint
-      - name: Build app
-        run: npm run build
-      - name: Run tests
-        run: npm test
+          node-version-file: .nvmrc
+      - run: yarn install --immutable
+      - run: yarn dlx prettier --check .
+      - run: yarn lint
+      - run: yarn build
+      - run: yarn test
