--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,10 @@ __snapshots__/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
