--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
     "@babel/preset-typescript": "^7.12.7",
+    "@dhruv-m-patel/eslint-config-react": "^1.1.1",
     "@loadable/babel-plugin": "^5.13.2",
     "@loadable/webpack-plugin": "^5.14.0",
     "@storybook/addon-a11y": "^6.1.11",
@@ -95,26 +96,15 @@
     "@types/react-router-dom": "^5.1.6",
     "@types/redux-api-middleware": "^3.2.2",
     "@types/store": "^2.0.2",
-    "@typescript-eslint/eslint-plugin": "4.11.0",
-    "@typescript-eslint/parser": "4.11.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-macros": "^2.8.0",
-    "eslint": "^7.16.0",
-    "eslint-config-prettier": "^7.1.0",
-    "eslint-config-standard": "^14.1.1",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^23.20.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.3.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-react": "^7.34.1",
-    "eslint-plugin-standard": "^4.1.0",
+    "eslint": "^8.57.0",
     "husky": "^4.3.6",
     "jest": "^26.6.3",
-    "lint-staged": "^10.5.3",
+    "lint-staged": "^15.2.2",
     "nodemon": "^2.0.6",
-    "prettier": "2.2.1",
+    "prettier": "3.2.5",
     "react-is": "^16.13.1",
     "react-test-renderer": "^16.14.0",
     "rimraf": "^3.0.2",
