--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A universal react app with styled-components and redux support",
   "main": "build/server/index.js",
   "scripts": {
-    "build:server": "babel ./src --out-dir build --extensions \".ts,.tsx\" --ignore \"src/**/*.stories.js\",\"src/**/*.test.tsx\"",
+    "build:server": "babel ./src --out-dir build --extensions \".ts,.tsx\" --ignore \"**/*.test.tsx, **/*.stories.js\"",
     "build:client": "BABEL_ENV=webpack webpack",
     "build": "yarn build:server && yarn build:client",
     "clean": "rimraf build && rimraf build-static",
@@ -89,6 +89,7 @@
     "@types/redux-api-middleware": "^3.2.6",
     "@types/store": "^2.0.5",
     "babel-loader": "^8.3.0",
+    "babel-plugin-css-modules-transform": "^1.6.2",
     "babel-plugin-macros": "^3.1.0",
     "eslint": "^8.57.0",
     "husky": "^4.3.6",
@@ -107,6 +108,7 @@
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "typescript": "^4.9.5",
+    "typescript-plugin-css-modules": "^5.1.0",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4"
   },
