feat: Upgrade to storybook v7

--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "pretest": "jest --clearCache",
     "test": "jest",
     "ci:test": "jest --coverage",
-    "storybook": "start-storybook -p 3001",
-    "build-storybook": "build-storybook"
+    "storybook": "sb dev -p 3001",
+    "storybook:build": "sb build"
   },
   "repository": {
     "type": "git",
@@ -69,11 +69,14 @@
     "@dhruv-m-patel/eslint-config-react": "^1.1.1",
     "@loadable/babel-plugin": "^5.16.1",
     "@loadable/webpack-plugin": "^5.15.2",
-    "@storybook/addon-a11y": "^6.1.11",
-    "@storybook/addon-actions": "^6.1.11",
-    "@storybook/addon-essentials": "^6.1.11",
-    "@storybook/addon-links": "^6.1.11",
-    "@storybook/react": "^6.1.11",
+    "@storybook/addon-a11y": "7.6.19",
+    "@storybook/addon-actions": "7.6.19",
+    "@storybook/addon-essentials": "7.6.19",
+    "@storybook/addon-links": "7.6.19",
+    "@storybook/cli": "7.6.19",
+    "@storybook/react": "7.6.19",
+    "@storybook/react-webpack5": "7.6.19",
+    "@storybook/testing-react": "7.6.19",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@types/confit": "^2.0.3",
